@@ -20,7 +20,7 @@ namespace io
 	const s16 ZIP_FILE_ENCRYPTED =		0x0001;
 	// the fields crc-32, compressed size and uncompressed size are set to
 	// zero in the local header
-	const s16 ZIP_INFO_IN_DATA_DESCRITOR =	0x0008;
+	const s16 ZIP_INFO_IN_DATA_DESCRIPTOR =	0x0008;
 
 #if defined(_MSC_VER) || defined(__BORLANDC__) || defined (__BCPLUSPLUS__) 
 #	pragma pack( push, packing )
@@ -94,6 +94,25 @@ namespace io
 		// zipfile comment (variable size)
 	} PACK_STRUCT;
 
+	enum E_GZIP_FLAGS
+	{
+		EGZF_TEXT_DAT      = 1,
+		EGZF_CRC16         = 2,
+		EGZF_EXTRA_FIELDS  = 4,
+		EGZF_FILE_NAME     = 8,
+		EGZF_COMMENT       = 16
+	};
+
+	struct SGZIPMemberHeader
+	{
+		u16 sig; // 0x8b1f
+		u8  compressionMethod; // 8 = deflate
+		u8  flags;
+		u32 time;
+		u8  extraFlags; // slow compress = 2, fast compress = 4
+		u8  operatingSystem;
+	} PACK_STRUCT;
+
 // Default alignment
 #if defined(_MSC_VER) || defined(__BORLANDC__) || defined (__BCPLUSPLUS__) 
 #	pragma pack( pop, packing )
@@ -119,9 +138,6 @@ namespace io
 
 		//! Constructor
 		CArchiveLoaderZIP(io::IFileSystem* fs);
-
-		//! destructor
-		virtual ~CArchiveLoaderZIP();
 
 		//! returns true if the file maybe is able to be loaded by this class
 		//! based on the file extension (e.g. ".zip")
@@ -151,14 +167,15 @@ namespace io
 
 /*!
 	Zip file Reader written April 2002 by N.Gebhardt.
-	Doesn't decompress data, only reads the file and is able to
-	open uncompressed entries.
 */
 	class CZipReader : public IFileArchive
 	{
 	public:
 
-		CZipReader(IReadFile* file, bool ignoreCase, bool ignorePaths);
+		//! constructor
+		CZipReader(IReadFile* file, bool ignoreCase, bool ignorePaths, bool isGZip=false);
+
+		//! destructor
 		virtual ~CZipReader();
 
 		//! opens a file by file name
@@ -177,32 +194,31 @@ namespace io
 		virtual s32 findFile(const core::string<c16>& filename);
 
 		//! return the id of the file Archive
-		virtual const core::string<c16>& getArchiveName ();
+		virtual const core::string<c16>& getArchiveName();
 
 		//! get the class Type
 		virtual E_FILE_ARCHIVE_TYPE getType() const { return EFAT_ZIP; }
 
-	private:
-		
-		//! scans for a local header, returns false if there is no more
-		//! local file header.
-		bool scanLocalHeader();
-		bool scanLocalHeader2();
-		IReadFile* File;
-		SZipFileEntry temp;
 	protected:
+
+		IReadFile* File;
+
+		//! reads the next file header from a ZIP file, returns false if there are no more headers.
+		bool scanZipHeader();
+
+		//! the same but for gzip files
+		bool scanGZipHeader();
 
 		//! splits filename from zip file into useful filenames and paths
 		void extractFilename(SZipFileEntry* entry);
 
-
 		bool IgnoreCase;
 		bool IgnorePaths;
+		bool IsGZip;
 		core::array<SZipFileEntry> FileList;
 
 		core::string<c16> Base;
 	};
-
 
 	//! Archiveloader capable of loading MountPoint Archives
 	class CArchiveLoaderMount : public IArchiveLoader
